src/objects/SSIS_Cost_Revenue_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Account_Code__c</fullName>
        <label>Account Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>This field indicates that this translation is for a specific Market. If this field is blank, the translation is valid for ALL markets</description>
        <inlineHelpText>This field indicates that this translation is for a specific Market. If this field is blank, the translation is valid for ALL markets</inlineHelpText>
        <label>Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Map_To__c</fullName>
        <label>Map To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Gifts</fullName>
                </value>
                <value>
                    <fullName>Honorarium</fullName>
                </value>
                <value>
                    <fullName>Hotel &amp; Accommodation</fullName>
                </value>
                <value>
                    <fullName>Mailing &amp; Printing</fullName>
                </value>
                <value>
                    <fullName>Other/Uncategorized</fullName>
                </value>
                <value>
                    <fullName>Participation fees</fullName>
                </value>
                <value>
                    <fullName>Speaker Travel</fullName>
                </value>
                <value>
                    <fullName>Third Party Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Travel &amp; Transfer</fullName>
                </value>
                <value>
                    <fullName>Venue Expenses</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SSIS: Cost/Revenue Mapping</label>
    <listViews>
        <fullName>AT_Accounting_Plan_Mapping</fullName>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>Account_Code__c</columns>
        <columns>Map_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>AT</value>
        </filters>
        <label>AT: Accounting Plan Mapping</label>
        <language>en_US</language>
        <sharedTo>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AU_Account_Mapping_Plan</fullName>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>Account_Code__c</columns>
        <columns>Map_To__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>AU</value>
        </filters>
        <label>AU: Account Mapping Plan</label>
        <language>en_US</language>
        <sharedTo>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Code__c</columns>
        <columns>Map_To__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BeNeLux_Account_Mapping_Plan</fullName>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>Account_Code__c</columns>
        <columns>Map_To__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>BE,NL,LU</value>
        </filters>
        <label>BeNeLux: Account Mapping Plan</label>
        <language>en_US</language>
        <sharedTo>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CH_Account_Mapping_Plan</fullName>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>Account_Code__c</columns>
        <columns>Map_To__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>CH</value>
        </filters>
        <label>CH: Account Mapping Plan</label>
        <language>en_US</language>
        <sharedTo>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DE_Accounting_plan_mapping</fullName>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>Account_Code__c</columns>
        <columns>Map_To__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>DE</value>
        </filters>
        <label>DE: Accounting plan mapping</label>
        <language>en_US</language>
        <sharedTo>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DK_Account_Mapping_Plan</fullName>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>Account_Code__c</columns>
        <columns>Map_To__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>DK</value>
        </filters>
        <label>DK: Account Mapping Plan</label>
        <language>en_US</language>
        <sharedTo>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FI_Account_Mapping_Pland</fullName>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>Account_Code__c</columns>
        <columns>Map_To__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>FI</value>
        </filters>
        <label>FI: Account Mapping Pland</label>
        <language>en_US</language>
        <sharedTo>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IBERIA_Account_Mapping_Plan</fullName>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Map_To__c</columns>
        <columns>Account_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>ES</value>
        </filters>
        <label>IBERIA; Account Mapping Plan</label>
        <language>en_US</language>
        <sharedTo>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_Accounting_Plan_Mapping</fullName>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>Account_Code__c</columns>
        <columns>Map_To__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>IT</value>
        </filters>
        <label>IT: Accounting Plan Mapping</label>
        <language>en_US</language>
        <sharedTo>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JP_Account_Mapping_Plan</fullName>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>Account_Code__c</columns>
        <columns>Map_To__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>JP</value>
        </filters>
        <label>JP: Account Mapping Plan</label>
        <language>en_US</language>
        <sharedTo>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NO_Account_Mapping_Plan</fullName>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>Account_Code__c</columns>
        <columns>Map_To__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>NO</value>
        </filters>
        <label>NO: Account Mapping Plan</label>
        <language>en_US</language>
        <sharedTo>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PL_Account_Mapping_Plan</fullName>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>Map_To__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Account_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>PL</value>
        </filters>
        <label>PL: Account Mapping Plan</label>
        <language>en_US</language>
        <sharedTo>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RU_Accounting_Plan_Mapping</fullName>
        <columns>NAME</columns>
        <columns>Account_Code__c</columns>
        <columns>Map_To__c</columns>
        <columns>Country__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>RU</value>
        </filters>
        <label>RU: Accounting Plan Mapping</label>
        <language>en_US</language>
        <sharedTo>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SE_HQ_Accounting_plan_mapping</fullName>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>Account_Code__c</columns>
        <columns>Map_To__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>SE</value>
        </filters>
        <label>SE/HQ: Accounting plan mapping</label>
        <language>en_US</language>
        <sharedTo>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Cost/Revenue Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SSIS: Cost/Revenue Mappings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>